# SkillMate

./: .gitignore  .npmrc  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  vitest.config.js
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  release.yml
scripts/release/: generate-latest.mjs  validate-release.mjs
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_core.rs  database.rs  git_backup.rs  install_policy.rs  lib.rs  library_manifest.rs  main.rs  managed_installation.rs  managed_state.rs  operation_plan.rs  organization_commands.rs  scenario_manifest.rs  skill_install.rs  skill_install_source.rs  skill_inventory.rs  skill_orchestration.rs  skill_origin.rs  skill_package.rs  skill_profile.rs  skill_reconcile.rs  skill_structure.rs  skillmate_manifest.rs
src/components/: Icon.jsx  InventoryViews.jsx  ModalShell.jsx  ScenarioView.jsx  SettingsView.jsx  SkillMateFlows.test.jsx  SkillMateModals.jsx
src/lib/: installPolicy.mjs  installPolicy.test.mjs  modalFocus.mjs  modalFocus.test.mjs  plannedAction.mjs  plannedAction.test.mjs  releaseMetadata.test.mjs  skillmate.mjs  skillmate.test.mjs  skillmateApi.js  skillmateFlows.js  toastTimer.mjs  toastTimer.test.mjs  useAppUpdateFlow.js  useGitBackupFlow.js  useImportExportFlow.js  useInstallFlow.js  useInstallPolicyFlow.js  useScenarioFlow.js  useUpdateFlow.js
