[package]
name = "skillmate"
version = "0.0.6"
description = "AI Coding Assistant Skill Manager"
authors = ["SkillMate"]
license = "AGPL-3.0-or-later"
edition = "2021"

[lib]
name = "skillmate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
sha2 = "0.10"
dirs = "5"
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
